--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -1,10 +1,10 @@
 <h1>Login</h1>
 <form method="post" action="/login">
     <label for="username">Username</label>
-    <input type="text" id="username">
+    <input type="text" id="username" name="username">
     <p></p>
     <label for="password">Password</label>
-    <input type="password" id="password">
+    <input type="password" id="password" name="password">
     <p></p>
     <button type="submit">Login</button>
 </form>
