make basic auth work

--- a/src/views/signup.ejs
+++ b/src/views/signup.ejs
@@ -1,11 +1,21 @@
-<h1>Signup</h1>
-<form method="post" action="/signup">
-    <label for="username">Username</label>
-    <input type="text" id="username">
-    <p></p>
-    <label for="password">Password</label>
-    <input type="password" id="password">
-    <p></p>
-    <button type="submit">Signup</button>
-</form>
-<div>Have an account already? <a href="/login">Login here</a></div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>Signup</h1>
+    <form method="post" action="/signup">
+        <label for="username">Username</label>
+        <input type="text" id="username" name="username">
+        <p></p>
+        <label for="password">Password</label>
+        <input type="password" id="password" name="password">
+        <p></p>
+        <button type="submit">Signup</button>
+    </form>
+    <div>Have an account already? <a href="/login">Login here</a></div>
+</body>
+</html>
