--- a/src/views/partials/login.ejs
+++ b/src/views/partials/login.ejs
@@ -3,14 +3,14 @@
         <h1 class=" mb-9 text-xl font-bold leading-tight tracking-tight md:text-2xl text-white">
             Welcome Back
         </h1>
-        <form class="w-full space-y-4 sm:w-3/5 md:w-2/5 md:space-y-6 lg:w-1/3" action="/login" method="post">
+        <form class="w-full space-y-4 sm:w-3/5 md:w-2/5 md:space-y-6 lg:w-4/12" action="/login" method="post">
             <div>
                 <label for="username" class="block mb-2 text-sm font-medium text-white">Username</label>
-                <input type="text" name="username" id="username" class="border text-gray-900 text-sm rounded-lg block w-full p-2.5 bg-gray-700 border-gray-600 placeholder-gray-400" placeholder="username">
+                <input type="text" name="username" id="username" class="border text-white text-sm rounded-lg block w-full p-2.5 bg-gray-700 border-gray-600 placeholder-gray-400" placeholder="username">
             </div>
             <div>
                 <label for="password-login" class="block mb-2 text-sm font-medium text-white">Password</label>
-                <input type="password" name="password" id="password-login" placeholder="••••••••" class=" border text-gray-900 text-sm rounded-lg block w-full p-2.5 bg-gray-700 border-gray-600 placeholder-gray-400">
+                <input type="password" name="password" id="password-login" placeholder="••••••••" class=" border text-white text-sm rounded-lg block w-full p-2.5 bg-gray-700 border-gray-600 placeholder-gray-400">
                 <% if (error) { %>
                     <p class="text-red-500 text-xs italic mt-1 absolute"><%= error %></p>
                 <% } %>
