--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GuudeDrive</title>
     <link rel="stylesheet" href="/styles/output.css">
+    <script defer src="./javascript/toggleMenu.js"></script>
+    <script src="/javascript/flowbite.min.js"></script>
 </head>
-<body>
-    <%- include("./layout/header.ejs") %>
-    <%- body %>
-</body>
+    <body class="flex flex-col h-full min-h-screen">
+        <%- include("./layout/header.ejs") %>
+        <%- body %>
+    </body>
 </html>
