--- a/src/views/partials/uploadFileModal.ejs
+++ b/src/views/partials/uploadFileModal.ejs
@@ -1,7 +1,7 @@
 <div id="upload-modal" tabindex="-1" aria-hidden="true" class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
     <div class="relative p-4 w-full max-w-2xl max-h-full">
         <!-- Modal content -->
-        <div class="relative  rounded-lg shadow-sm bg-gray-700">
+        <div class="relative rounded-lg shadow-sm bg-gray-700">
             <!-- Modal header -->
             <div class="flex items-center justify-between p-4 md:p-5 border-b rounded-t border-gray-600 ">
                 <h3 class="text-xl font-semibold text-white">
@@ -17,7 +17,7 @@
             <!-- Modal body -->
             <div class="p-4 md:p-5 space-y-4">        
                 <div class="flex items-center justify-center w-full">
-                    <label for="dropzone-file" class="flex flex-col items-center justify-center w-full h-64 border-2 border-dashed rounded-lg cursor-pointer hover:bg-gray-800 bg-gray-700 border-gray-600 hover:border-gray-500">
+                    <label id="dropzone" for="dropzone-file" class="flex flex-col items-center justify-center w-full h-64 border-2 border-dashed rounded-lg cursor-pointer hover:bg-gray-800 bg-gray-700 border-gray-600 hover:border-gray-500">
                         <div class="flex flex-col items-center justify-center pt-5 pb-6">
                             <svg class="w-8 h-8 mb-4 text-gray-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 16">
                                 <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 13h3a3 3 0 0 0 0-6h-.025A5.56 5.56 0 0 0 16 6.5 5.5 5.5 0 0 0 5.207 5.021C5.137 5.017 5.071 5 5 5a4 4 0 0 0 0 8h2.167M10 15V6m0 0L8 8m2-2 2 2"/>
@@ -25,14 +25,18 @@
                             <p class="mb-2 text-sm text-gray-400"><span class="font-semibold">Click to upload</span> or drag and drop</p>
                             <p class="text-xs text-gray-400">SVG, PNG, JPG or GIF (MAX. 800x400px)</p>
                         </div>
-                        <input id="dropzone-file" type="file" class="hidden" />
+                        <form action="/upload" method="post" enctype="multipart/form-data" id="uploadFile">
+                            <input id="dropzone-file" type="file" class="hidden" name="file" />
+                        </form>
                     </label>
                 </div> 
+                <!-- File names section -->
+                <div id="file-names"></div>
             </div>
             <!-- Modal footer -->
             <div class="flex justify-end items-center p-4 md:p-5 border-t rounded-b border-gray-600">
-                <button data-modal-hide="upload-modal" type="button" class="py-2.5 px-5 text-sm font-medium rounded-lg border bg-gray-800 text-gray-400 border-gray-600 hover:text-white hover:bg-gray-700">Cancel</button>
-                <button data-modal-hide="upload-modal" type="button" class=" ms-3 text-white font-medium rounded-lg text-sm px-5 py-2.5 text-center bg-blue-600 hover:bg-blue-700">Upload</button>
+                <button data-modal-hide="upload-modal" type="button" class="py-2.5 px-5 text-sm font-medium rounded-lg border bg-gray-800 text-gray-300 border-gray-600 hover:text-white hover:bg-gray-700">Cancel</button>
+                <button id="submit" type="submit" form="uploadFile" disabled data-modal-hide="upload-modal" class="ms-3 text-white font-medium rounded-lg text-sm px-5 py-2.5 text-center disabled:opacity-35 bg-blue-600 enabled:hover:bg-blue-700">Upload</button>
             </div>
         </div>
     </div>
