update js script filepath

--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GuudeDrive</title>
     <link rel="stylesheet" href="/styles/output.css">
-    <script defer src="./javascript/toggleMenu.js"></script>
+    <script defer src="/javascript/toggleMenu.js"></script>
+    <script defer src="/javascript/fileInput.js"></script>
     <script src="/javascript/flowbite.min.js"></script>
 </head>
     <body class="flex flex-col h-full min-h-screen">
