--- a/src/views/partials/tableHeader.ejs
+++ b/src/views/partials/tableHeader.ejs
@@ -5,7 +5,7 @@
         </svg>
         Upload File
     </button>
-    <button class="flex items-center justify-center px-4 py-2 text-sm font-medium border rounded-lg w-auto focus:outline-none bg-gray-800 text-gray-400 border-gray-600 hover:text-white hover:bg-gray-700" type="button">
+    <button data-modal-target="new-folder" data-modal-toggle="new-folder" class="flex items-center justify-center px-4 py-2 text-sm font-medium border rounded-lg w-auto focus:outline-none bg-gray-800 text-gray-400 border-gray-600 hover:text-white hover:bg-gray-700" type="button">
         <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" class="w-4 h-4 mr-2 text-gray-400" viewbox="0 0 20 20" fill="currentColor">
             <path fill-rule="evenodd" d="M5 4a2 2 0 0 0-2 2v1h10.968l-1.9-2.28A2 2 0 0 0 10.532 4H5ZM3 19V9h18v10a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2Zm9-8.5a1 1 0 0 1 1 1V13h1.5a1 1 0 1 1 0 2H13v1.5a1 1 0 1 1-2 0V15H9.5a1 1 0 1 1 0-2H11v-1.5a1 1 0 0 1 1-1Z" clip-rule="evenodd"/>
         </svg>          
