--- a/src/views/partials/breadCrumbs.ejs
+++ b/src/views/partials/breadCrumbs.ejs
@@ -30,7 +30,7 @@
             <div class="ms-1 text-sm font-medium md:ms-2 text-gray-400">...</div>
           </div>
         </li>
-        <% for (let i = breadcrumbz.length - 1; i >= breadcrumbz.length - 2; i--) { %>
+        <% for (let i = breadcrumbz.length - 2; i <= breadcrumbz.length -1; i++) { %>
             <li>
               <div class="flex items-center">
                 <svg class="rtl:rotate-180 w-3 h-3 text-gray-400 mx-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
