--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -8,6 +8,8 @@
     <script defer src="/javascript/toggleMenu.js"></script>
     <script defer src="/javascript/fileInput.js"></script>
     <script src="/javascript/flowbite.min.js"></script>
+    <script src="/javascript/populateUpdateModal.js"></script>
+    <script src="/javascript/scrollToItem.js"></script>
 </head>
     <body class="flex flex-col h-full min-h-screen">
         <%- include("./layout/header.ejs") %>
