--- a/src/views/partials/newFolderModal.ejs
+++ b/src/views/partials/newFolderModal.ejs
@@ -16,11 +16,9 @@
                 </button>
             </div>
             <!-- Modal body -->
-            <form action="/new-folder?folderId=<%= folderId %>" method="post" class="p-4 md:p-5 flex flex-col" >
-                <div>
-                    <label for="name" class="block mb-2 text-sm font-medium  text-white">Name</label>
-                    <input type="text" name="name" id="name" maxlength="30" class="border text-sm rounded-lg block w-full p-2.5 mb-5 bg-gray-600 border-gray-500 placeholder-gray-400 text-white" placeholder="Type folder name" required>
-                </div>
+            <form action="/new-folder?folderId=<%= folderId %>" id="add-folder-form" method="post" class="p-4 md:p-5 flex flex-col" >
+                <label for="name" class="block mb-2 text-sm font-medium  text-white">Name</label>
+                <input type="text" name="name" id="name" maxlength="30" class="border text-sm rounded-lg block w-full p-2.5 mb-5 bg-gray-600 border-gray-500 placeholder-gray-400 text-white" placeholder="Type folder name" required>
                 <button type="submit" class="w-max self-end text-white inline-flex items-center bg-blue-700 hover:bg-blue-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center">
                     <svg class="me-1 -ms-1 w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                         <path fill-rule="evenodd" d="M10 5a1 1 0 011 1v3h3a1 1 0 110 2h-3v3a1 1 0 11-2 0v-3H6a1 1 0 110-2h3V6a1 1 0 011-1z" clip-rule="evenodd"></path>
