--- a/src/views/partials/table.ejs
+++ b/src/views/partials/table.ejs
@@ -13,7 +13,7 @@
             </thead>
             <tbody>
                 <% for (const item of content) { %>
-                    <tr class="border-b bg-gray-800 border-gray-700 hover:bg-gray-600">
+                    <tr class="border-b bg-gray-800 border-gray-700 hover:bg-gray-600" id="<%= item.id %>">
                         <% if (item.type == "folder") { %>
                             <th scope="row">
                                 <a href="/my-drive/<%= item.id ? item.id : null %>" class="flex items-center gap-4 px-6 py-4 font-medium whitespace-nowrap text-white">
@@ -23,13 +23,13 @@
                                     <%= item.name %>
                                 </a>
                             </th>
-                        <% } else { %>
-                            <th scope="row" class="flex items-center gap-4 px-6 py-4 font-medium whitespace-nowrap text-white">
-                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-                                    <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 14.25v-2.625a3.375 3.375 0 0 0-3.375-3.375h-1.5A1.125 1.125 0 0 1 13.5 7.125v-1.5a3.375 3.375 0 0 0-3.375-3.375H8.25m2.25 0H5.625c-.621 0-1.125.504-1.125 1.125v17.25c0 .621.504 1.125 1.125 1.125h12.75c.621 0 1.125-.504 1.125-1.125V11.25a9 9 0 0 0-9-9Z" />
-                                </svg>
-                                <%= item.name %>
-                            </th>
+                            <% } else { %>
+                                <th scope="row" class="flex items-center gap-4 px-6 py-4 font-medium whitespace-nowrap text-white">
+                                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                                        <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 14.25v-2.625a3.375 3.375 0 0 0-3.375-3.375h-1.5A1.125 1.125 0 0 1 13.5 7.125v-1.5a3.375 3.375 0 0 0-3.375-3.375H8.25m2.25 0H5.625c-.621 0-1.125.504-1.125 1.125v17.25c0 .621.504 1.125 1.125 1.125h12.75c.621 0 1.125-.504 1.125-1.125V11.25a9 9 0 0 0-9-9Z" />
+                                    </svg>
+                                    <%= item.name %>
+                                </th>
                         <% } %>
                         <td class="px-6 py-4"><%= item.updatedAt %></td>
                         <td class="px-6 py-4"><%= item.size ? item.size : null %></td>
@@ -40,7 +40,7 @@
                                 </svg>
                             </div>
                             <div class="hidden actionMenu">
-                                <%- include("./actionMenu.ejs") %>
+                                <%- include("./actionMenu.ejs", { item }) %>
                             </div>
                         </td>
                     </tr>
