add item delete modal and client code

--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -9,6 +9,7 @@
     <script defer src="/javascript/fileInput.js"></script>
     <script src="/javascript/flowbite.min.js"></script>
     <script src="/javascript/populateUpdateModal.js"></script>
+    <script src="/javascript/populateDeleteModal.js"></script>
     <script src="/javascript/scrollToItem.js"></script>
 </head>
     <body class="flex flex-col h-full min-h-screen">
