--- a/src/views/partials/main.ejs
+++ b/src/views/partials/main.ejs
@@ -12,3 +12,4 @@
 <%- include("./uploadFileModal.ejs")%>
 <%- include("./newFolderModal.ejs")%>
 <%- include("./updateItemModal.ejs")%>
+<%- include("./deleteItemModal.ejs")%>
