--- a/src/views/partials/actionMenu.ejs
+++ b/src/views/partials/actionMenu.ejs
@@ -1,5 +1,5 @@
 <div class="absolute z-10 w-44 rounded divide-y shadow bg-gray-700 divide-gray-800">
-    <ul class="py-1 text-sm  text-white">
+    <ul class="py-1 text-sm text-white">
         <li>
             <button 
               data-modal-target="update-item" 
@@ -33,12 +33,18 @@
             </a>
         </li>
     </ul>
-    <div class="py-1">
-        <a href="#" class="flex items-center gap-2 py-2 px-4 hover:bg-gray-600 text-white">
+    <div class="py-1 text-red-300">
+        <button 
+              data-modal-target="delete-item"
+              data-modal-toggle="delete-item"
+              data-item-id="<%= item.id %>"
+              data-item-name="<%= item.name %>"
+              data-item-type="<%= item.type %>"
+              class="flex w-full items-center gap-2 py-2 px-4 hover:bg-gray-600">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5">
             <path fill-rule="evenodd" d="M8.75 1A2.75 2.75 0 0 0 6 3.75v.443c-.795.077-1.584.176-2.365.298a.75.75 0 1 0 .23 1.482l.149-.022.841 10.518A2.75 2.75 0 0 0 7.596 19h4.807a2.75 2.75 0 0 0 2.742-2.53l.841-10.52.149.023a.75.75 0 0 0 .23-1.482A41.03 41.03 0 0 0 14 4.193V3.75A2.75 2.75 0 0 0 11.25 1h-2.5ZM10 4c.84 0 1.673.025 2.5.075V3.75c0-.69-.56-1.25-1.25-1.25h-2.5c-.69 0-1.25.56-1.25 1.25v.325C8.327 4.025 9.16 4 10 4ZM8.58 7.72a.75.75 0 0 0-1.5.06l.3 7.5a.75.75 0 1 0 1.5-.06l-.3-7.5Zm4.34.06a.75.75 0 1 0-1.5-.06l-.3 7.5a.75.75 0 1 0 1.5.06l.3-7.5Z" clip-rule="evenodd" />
             </svg>
-            Delete              
-        </a>
+            Delete
+        </button>
     </div>
 </div>
