--- a/src/views/partials/table.ejs
+++ b/src/views/partials/table.ejs
@@ -33,13 +33,20 @@
                         <% } %>
                         <td class="px-6 py-4"><%= item.updatedAt %></td>
                         <td class="px-6 py-4"><%= item.size ? item.size : null %></td>
-                        <td class="px-6 py-4 relative">
-                            <div onclick="toggleMenu(this)">
+                        <td class="px-6 py-4">
+                            <button 
+                                data-popover-target="dropdown-<%= item.id %>" 
+                                class="text-white text-center inline-flex items-center" 
+                                type="button">
                                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 cursor-pointer">
                                     <path stroke-linecap="round" stroke-linejoin="round" d="M12 6.75a.75.75 0 1 1 0-1.5.75.75 0 0 1 0 1.5ZM12 12.75a.75.75 0 1 1 0-1.5.75.75 0 0 1 0 1.5ZM12 18.75a.75.75 0 1 1 0-1.5.75.75 0 0 1 0 1.5Z" />
                                 </svg>
-                            </div>
-                            <div class="hidden actionMenu">
+                            </button>
+                            <div
+                                data-popover
+                                role="tooltip"
+                                id="dropdown-<%= item.id %>"
+                                class="z-10 absolute invisible divide-y divide-gray-800 rounded-lg w-44 bg-gray-700 transition-opacity duration-500">
                                 <%- include("./actionMenu.ejs", { item }) %>
                             </div>
                         </td>
@@ -74,3 +81,4 @@
     </div>
 
     <div class="text-yellow-200">current: <%= folderId %></div>
+
