implement file download

--- a/src/views/partials/actionMenu.ejs
+++ b/src/views/partials/actionMenu.ejs
@@ -19,7 +19,9 @@
         <% if (item.type == "folder") { %>
             <button disabled class="flex w-full items-center gap-2 py-2 px-4 enabled:hover:bg-gray-600 disabled:text-gray-400">
         <% } else { %>
-            <button class="flex w-full items-center gap-2 py-2 px-4 enabled:hover:bg-gray-600 disabled:text-gray-400">
+            <form action="/download/<%= item.id %>" method="get">
+                <button class="flex w-full items-center gap-2 py-2 px-4 enabled:hover:bg-gray-600 disabled:text-gray-400">
+            </form>
         <% } %>
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5">
                 <path d="M10.75 2.75a.75.75 0 0 0-1.5 0v8.614L6.295 8.235a.75.75 0 1 0-1.09 1.03l4.25 4.5a.75.75 0 0 0 1.09 0l4.25-4.5a.75.75 0 0 0-1.09-1.03l-2.955 3.129V2.75Z" />
