implement success toast for delete and download

--- a/src/views/partials/deleteItemModal.ejs
+++ b/src/views/partials/deleteItemModal.ejs
@@ -24,4 +24,11 @@
         </div>
     </div>
 </div>
-    
+<!-- Render Confirmation toast when deleteSucess variable send by server -->
+<% if (deleteSuccess) { %>
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            setToast("Item deleted!");
+        });
+    </script>
+<% } %>
