--- a/src/views/partials/main.ejs
+++ b/src/views/partials/main.ejs
@@ -13,3 +13,4 @@
 <%- include("./newFolderModal.ejs")%>
 <%- include("./updateItemModal.ejs")%>
 <%- include("./deleteItemModal.ejs")%>
+<%- include("./toastContainer.ejs")%>
