--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -5,11 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GuudeDrive</title>
     <link rel="stylesheet" href="/styles/output.css">
-    <script defer src="/javascript/fileInput.js"></script>
     <script src="/javascript/flowbite.min.js"></script>
-    <script src="/javascript/populateUpdateModal.js"></script>
-    <script src="/javascript/populateDeleteModal.js"></script>
-    <script src="/javascript/scrollToItem.js"></script>
+    <script defer type="module" src="/javascript/main.js"></script>
 </head>
     <body class="flex flex-col h-full min-h-screen">
         <%- include("./layout/header.ejs") %>
