--- a/src/views/partials/actionMenu.ejs
+++ b/src/views/partials/actionMenu.ejs
@@ -20,7 +20,7 @@
             <button disabled class="flex w-full items-center gap-2 py-2 px-4 enabled:hover:bg-gray-600 disabled:text-gray-400">
         <% } else { %>
             <form action="/download/<%= item.id %>" method="get">
-                <button class="flex w-full items-center gap-2 py-2 px-4 enabled:hover:bg-gray-600 disabled:text-gray-400">
+                <button type="submit" onclick="setToast('Download Started!')" class="flex w-full items-center gap-2 py-2 px-4 enabled:hover:bg-gray-600 disabled:text-gray-400">
             </form>
         <% } %>
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5">
